crates/postgres-subsystem/postgres-core-builder/src/snapshots/with_camel_case_model_and_fields.snap
---
source: crates/postgres-subsystem/postgres-core-builder/src/resolved_builder.rs
expression: resolved
---
values:
  - - ~
    - Primitive:
        Plain: Boolean
  - - ~
    - Primitive:
        Plain: Int
  - - ~
    - Primitive:
        Plain: Float
  - - ~
    - Primitive:
        Plain: Decimal
  - - ~
    - Primitive:
        Plain: String
  - - ~
    - Primitive:
        Plain: LocalTime
  - - ~
    - Primitive:
        Plain: LocalDateTime
  - - ~
    - Primitive:
        Plain: LocalDate
  - - ~
    - Primitive:
        Plain: Instant
  - - ~
    - Primitive:
        Plain: Json
  - - ~
    - Primitive:
        Plain: Blob
  - - ~
    - Primitive:
        Plain: Uuid
  - - ~
    - Primitive:
        Plain: Vector
  - - ~
    - Composite:
        name: ConcertInfo
        plural_name: ConcertInfos
        representation: Managed
        fields:
          - name: concertId
            typ:
              Plain:
                type_name: Int
                is_primitive: true
            column_names:
              - concert_id
            self_column: true
            is_pk: true
            access:
              default:
                Literal:
                  Boolean:
                    - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            cardinality: ~
            default_value:
              AutoIncrement: ~
            update_sync: false
            readonly: false
            doc_comments: ~
          - name: mainTitle
            typ:
              Plain:
                type_name: String
                is_primitive: true
            column_names:
              - main_title
            self_column: true
            is_pk: false
            access:
              default:
                Literal:
                  Boolean:
                    - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            cardinality: ~
            default_value: ~
            update_sync: false
            readonly: false
            doc_comments: ~
        table_name:
          name: concert_infos
          schema: ~
        access:
          default: ~
          query: ~
          mutation: ~
          creation: ~
          update: ~
          delete: ~
        doc_comments: ~
  - ~
  - ~
map:
  Blob:
    index: 10
    generation: ~
  Boolean:
    index: 0
    generation: ~
  ConcertInfo:
    index: 13
    generation: ~
  Decimal:
    index: 3
    generation: ~
  Float:
    index: 2
    generation: ~
  Instant:
    index: 8
    generation: ~
  Int:
    index: 1
    generation: ~
  Json:
    index: 9
    generation: ~
  LocalDate:
    index: 7
    generation: ~
  LocalDateTime:
    index: 6
    generation: ~
  LocalTime:
    index: 5
    generation: ~
  String:
    index: 4
    generation: ~
  Uuid:
    index: 11
    generation: ~
  Vector:
    index: 12
    generation: ~
